add community service backend

--- a/community-service/index.html
+++ b/community-service/index.html
@@ -167,7 +167,7 @@
             <div class="cta-content">
                 <div class="container px-5">
                     <h2 class="text-white display-1 lh-1 mb-4">
-                        Para de gastar dinheiro.
+                        Pare de gastar dinheiro.
                         <br />
                         Invista em influenciadores.
                     </h2>
