--- a/community-service/index.html
+++ b/community-service/index.html
@@ -46,7 +46,8 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-1 lh-1 mb-3">Nova sede canal Nostalgia.</h1>
-                            <p class="lead fw-normal text-muted mb-5">Estamos crescendo e já somos 12 colaboradores, assim precisamos de um espaço melhor para a empresa.</p>
+                        <br />
+                        <p class="lead fw-normal text-muted mb-5">Estamos crescendo e já somos 12 colaboradores, assim precisamos de um espaço melhor para a empresa. <br/> Invista até 12 de dezembro.</p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                                     <span class="d-flex align-items-center">
